replace searsh bar to dropdown

--- a/index.html
+++ b/index.html
@@ -28,10 +28,33 @@
         </div>
       </div>
 
-      <div class="Change col-lg-3">
+      <!-- <div class="Change col-lg-3">
           <div>
               <input type="text" id="search-bar" class="search-bar w-100 mb-5 form-control" placeholder=" Search City..." style="font-family:Arial, FontAwesome">
           </div>
+          <div class="location-container">
+              <button id="location-button" class="location-button p-3"> <i class="fa-solid fa-location-dot me-1"></i><span>Change location</span></button>
+          </div>
+      </div> -->
+            <div class="Change col-lg-3">
+          <div>
+              <select id="city-dropdown" class="form-control w-100 mb-5">
+                  <option value="">Select a city...</option>
+                  <option value="Cairo">Cairo</option>
+                  <option value="Alexandria">Alexandria</option>
+                  <option value="Giza">Giza</option>
+                  <option value="Aswan">Aswan</option>
+                  <option value="Luxor">Luxor</option>
+                  <option value="London">London</option>
+                  <option value="New York">New York</option>
+                  <option value="Tokyo">Tokyo</option>
+                  <option value="Dubai">Dubai</option>
+                  <option value="Paris">Paris</option>
+              </select>
+          </div>
+          <!-- <div>
+              <input type="text" id="search-bar" class="search-bar w-100 mb-5 form-control" placeholder=" Search City..." style="font-family:Arial, FontAwesome">
+          </div> -->
           <div class="location-container">
               <button id="location-button" class="location-button p-3"> <i class="fa-solid fa-location-dot me-1"></i><span>Change location</span></button>
           </div>
