--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container d-flex flex-column justify-content-center ">
 
     <div class=" Weather justify-content-evenly row gy-5 gy-lg-0">
-      <div class="weather-side col-lg-3">
+      <div class="weather-side col-lg-3 m-0">
         <div class="weather-gradient"></div>
         <div class="date-container">
           <h2 id="date-dayname"  class="date-dayname"></h2>
