Adjust layout classes in index.html

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body id="loginPage" class="bg-dark">
+<body id="loginPage" class="bg-dark pt-0">
   <div class="container d-flex flex-column justify-content-center ">
 
-    <div class=" Weather justify-content-evenly row gy-5 gy-lg-0">
+    <div class=" Weather justify-content-evenly row gy-5 gy-lg-0 m-0">
       <div class="weather-side col-lg-3 m-0">
         <div class="weather-gradient"></div>
         <div class="date-container">
@@ -60,7 +60,7 @@
           </div>
       </div>
 
-      <div class="info-side col-lg-3">
+      <div class="info-side col-lg-3 p-0 m-0">
         <div class="today-info-container">
           <div class="today-info">
             <div class="humidity">
