--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body id="loginPage" class="bg-dark pt-0">
-  <div class="container d-flex flex-column justify-content-center ">
+  <div class="container d-flex flex-column justify-content-center pt-5">
 
     <div class=" Weather justify-content-evenly row gy-5 gy-lg-0 m-0">
       <div class="weather-side col-lg-3 m-0">
